--- a/roles/prepare/tasks/debian/upgrade.yml
+++ b/roles/prepare/tasks/debian/upgrade.yml
@@ -1,4 +1,18 @@
 ---
+- name: check python3-apt
+  shell: dpkg -s python3-apt
+  register: python3_apt_status
+  ignore_errors: true
+
+- name: install python3-apt
+  block:
+    - name: apt-get update (command line)
+      shell: apt-get update
+    - name: apt-get install -y python3-apt
+      shell: apt-get -y install python3-apt
+  when:
+    - python3_apt_status.failed == 1
+
 - name: apt-get update
   apt:
     update_cache: yes
