fixed item name for .j2

--- a/roles/openvpn/tasks/generate-ovpn/process.yml
+++ b/roles/openvpn/tasks/generate-ovpn/process.yml
@@ -1,4 +1,7 @@
 ---
+#
+# item ==> proto
+#
 - name: "Generating all-in-one .ovpn for {{ client }}/{{ proto }}"
   template:
     src: roles/openvpn/templates/client.ovpn.j2
